# ubuntu-gcc-container

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md
.devcontainer/: Dockerfile  devcontainer.json
include/: testes.h  util.h
src/: main.c  testes.c  util.c
